_rendered/apps/traefik/service-traefik-traefik.yaml
# Source: test/charts/traefik/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
    helm.sh/chart: traefik-41.1.0
    app.kubernetes.io/managed-by: Helm
    custom.network/lb-pool: static
  annotations:
    lbipam.cilium.io/ips: 10.0.4.200
spec:
  allocateLoadBalancerNodePorts: false
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
  ports:
  - port: 80
    name: web
    targetPort: web
    protocol: TCP
  - port: 443
    name: websecure
    targetPort: websecure
    protocol: TCP
